Update event notification to call fireChangeEvent() (readability).